add pin and password change capabilities
